--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
+#APP_ENV=prod
 APP_SECRET=a817e416a0a3a11c7cd38cb01de3f5d3
 #TRUSTED_PROXIES=127.0.0.1,127.0.0.2
 #TRUSTED_HOSTS='^localhost|example\.com$'
