--- a/.env
+++ b/.env
@@ -13,6 +13,10 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
+### CUSTOM VARS
+SLACK_WEBHOOK_ENDPOINT=https://hooks.slack.com/services/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
+### END CUSTOM VARS
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 #APP_ENV=prod
