--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.1",
         "easycorp/easy-log-handler": "^1.0.7",
         "sensiolabs/security-checker": "^5.0",
         "symfony/debug-bundle": "*",
