--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "nexylan/slack-bundle": "^2.0",
         "php-http/guzzle6-adapter": "1.1.1",
         "sensio/framework-extra-bundle": "^5.2",
+        "stof/doctrine-extensions-bundle": "^1.3",
         "symfony/apache-pack": "^1.0",
         "symfony/asset": "4.2.*",
         "symfony/console": "4.2.*",
@@ -69,6 +70,7 @@
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "easycorp/easy-log-handler": "^1.0.7",
+        "fzaninotto/faker": "^1.8",
         "sensiolabs/security-checker": "^5.0",
         "symfony/debug-bundle": "*",
         "symfony/maker-bundle": "^1.11",
