--- a/composer.json
+++ b/composer.json
@@ -33,12 +33,13 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "App\\Tests\\": "tests/",
+            "": "public/etc/src/"
         }
     },
     "replace": {
