--- a/.env
+++ b/.env
@@ -14,6 +14,10 @@
 # https://symfony.com/doc/current/best_practices/configuration.html#infrastructure-related-configuration
 
 
+### CUSTOM VARS
+SLACK_WEBHOOK_ENDPOINT=https://hooks.slack.com/...
+### END CUSTOM VARS
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 #APP_ENV=prod
