--- a/config/services.yaml
+++ b/config/services.yaml
@@ -38,8 +38,12 @@ services:
 #            - { name: form.type_extension,
 #                extended_type: Symfony\Component\Form\Extension\Core\Type\TextareaType }
 
+    KnpU\LoremIpsumBundle\KnpUIpsum: ~
+    TestBundle\Test: ~
+
 
 framework:
     translator: { fallbacks: ['%locale%'] }
+
 
 
